...
    
    func proceedToNextQuestionOrResults() {
        if self.isLastQuestion() {
            statisticService?.store(correct: correctAnswers, total: questionsAmount)
            
            let viewModel = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: showMessageInAlert(),
                buttonText: "Сыграть еще раз"
            )
            
            viewController?.show(quiz: viewModel)
        } else {
...
